Project

General

Profile

Actions

Bug #12398

closed

process.c compile broken for noMMU architectures on 2.3.x

Bug #12398: process.c compile broken for noMMU architectures on 2.3.x

Added by gustavoz (Gustavo Zacarias) over 10 years ago. Updated about 10 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:75611]

Description

rb_spawn_process() in process.c tries different solutions for when fork and/or spawnv are/aren't available.
The last resort when both aren't is to use the system() call which stores the value in the status variable, which isn't declared.
It only affects 2.3.0+


Files

0001-process.c-fix-rb_spawn_process-for-nommu.patch (1.04 KB) 0001-process.c-fix-rb_spawn_process-for-nommu.patch Fix nommu rb_spawn_process() gustavoz (Gustavo Zacarias), 05/19/2016 02:12 PM

Updated by nobu (Nobuyoshi Nakada) over 10 years ago Actions #1 [ruby-core:75625]

  • Description updated (diff)
  • Status changed from Open to Feedback

It seems that rb_spawn_process() has been broken since 2.0.
I think we should drop support for such platforms, no-fork, no-spawn, and non-Windows.
Do you have such platforms?

Updated by nobu (Nobuyoshi Nakada) over 10 years ago Actions #2 [ruby-core:75627]

BTW, what do you mean by "MMU", "memory management unit"?

Updated by nobu (Nobuyoshi Nakada) over 10 years ago Actions #3

  • Status changed from Feedback to Closed

Applied in changeset r55091.


fix build on no-fork-spawnv platforms

  • process.c (rb_execarg_commandline): build command line string
    from argument vector in rb_execarg.
    [ruby-core:75611] [Bug #12398]

Updated by nagachika (Tomoyuki Chikanaga) over 10 years ago Actions #4 [ruby-core:75646]

  • Backport changed from 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: UNKNOWN to 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: REQUIRED

Updated by usa (Usaku NAKAMURA) about 10 years ago Actions #5 [ruby-core:75890]

  • Backport changed from 2.1: UNKNOWN, 2.2: UNKNOWN, 2.3: REQUIRED to 2.1: WONTFIX, 2.2: REQUIRED, 2.3: REQUIRED

Updated by nagachika (Tomoyuki Chikanaga) about 10 years ago Actions #6 [ruby-core:76843]

  • Backport changed from 2.1: WONTFIX, 2.2: REQUIRED, 2.3: REQUIRED to 2.1: WONTFIX, 2.2: REQUIRED, 2.3: DONE

ruby_2_3 r55870 merged revision(s) 55090,55091.

Updated by usa (Usaku NAKAMURA) about 10 years ago Actions #7 [ruby-core:76918]

  • Backport changed from 2.1: WONTFIX, 2.2: REQUIRED, 2.3: DONE to 2.1: DONTNEED, 2.2: DONTNEED, 2.3: DONE
Actions

Also available in: PDF Atom